--- a/pytorchft/py_ft.yaml
+++ b/pytorchft/py_ft.yaml
@@ -1,58 +1,30 @@
-name: PyTorch Yelp Review Training
-description: Train a simple PyTorch model for text classification on the Yelp review dataset using Kubeflow and Elyra.
+name: Pytorch Yelp Trainer
+description: Train a PyTorch model for Yelp reviews (Elyra compatible, minimal).
 
 inputs:
   - name: data_path
     type: String
-    description: "Path to Yelp review CSV"
     default: "yelp_review_full.csv"
   - name: epochs
     type: Integer
-    description: "Number of training epochs"
     default: 2
   - name: batch_size
     type: Integer
-    description: "Batch size"
     default: 64
-  - name: emb_dim
-    type: Integer
-    description: "Embedding dimension"
-    default: 100
-  - name: max_len
-    type: Integer
-    description: "Max token length"
-    default: 128
-  - name: lr
-    type: Float
-    description: "Learning rate"
-    default: 0.001
 
 outputs:
-  - name: model_path
+  - name: model_output
     type: String
-    description: "Trained model file"
     default: "output/yelp_model.pth"
 
 implementation:
   container:
     image: python:3.10
     command:
-      - python
-      - train.py
-    args:
-      - --data_path
-      - { inputValue: data_path }
-      - --epochs
-      - { inputValue: epochs }
-      - --batch_size
-      - { inputValue: batch_size }
-      - --emb_dim
-      - { inputValue: emb_dim }
-      - --max_len
-      - { inputValue: max_len }
-      - --lr
-      - { inputValue: lr }
-      - --model_path
-      - { outputPath: model_path }
+      - sh
+      - -c
+      - |
+        pip install torch pandas torchtext
+        python train.py --data_path {inputs.data_path} --epochs {inputs.epochs} --batch_size {inputs.batch_size} --model_output {outputs.model_output}
     fileOutputs:
-      model_path: output/yelp_model.pth
+      model_output: output/yelp_model.pth
